x.y.z
=====

New features:

* Add What's New dialog
  - Help => What's New

Bug fixes:

Other:

1.13.1
======

Bug fixes:

* Fix GitHub Issue #75: Unpredictable crash on delete node via context menu

1.13.0
======

Bug fixes:

* Fix GitHub Issue #72: UTF-8 saving not working (on Windows)
* Fix GitHub Issue #73: Extra newlines on Windows 

Other:

* Add --debug and turn some info logs into debug logs

1.12.0
======

New features:

* Fix GitHub Issue #67: Button to drag cards

* Fix GitHub Issue #66: Add fullscreen option
  * There's now View => Full Screen

* Fix GitHub Issue #51: Insert Images Into Nodes
  * Node context menu now includes "Attach image" and "Remove attached image"
  * The attached image will be set as the background image of the node
  * The image data is embedded in the .ALZ-file

Other:

* Fix GitHub Issue #68: Build .qm-files as part of the build process

1.11.0
======

New features:

* Fix GitHub Issue #59: Enable text entry in newly created nodes
* Fix GitHub Issue #61: System dialogs are not localized
* Fix GitHub Issue #55: Ability to copy the node without connection

1.10.0 - "Summer Serafina"
==========================

New features:

* Fix GitHub Issue #58: Add selection rectangle for nodes
  * With Ctrl pressed one can now draw a selection rectangle
* Add Italian translations

1.9.0 - "Arrow Amalgam"
=======================

New features:

* Fix GitHub Issue #53: Add option to set corner radius
* Fix GitHub Issue #32: Add mechanism to set arrow direction
  * Right-click on edge shows a context menu with options to set single arrow, double arrow, hide arrows, and reverse the direction
* Fix GitHub Issue #25: Add a way to delete edges
  * Right-click on edge opens context menu with a delete option

Bug fixes:

* Fix GitHub Issue #54: Moving a non-selected node moves selection group

Other:

* Snap: Fix desktop-qt5 not working as a remote part anymore
* Snap: Fix mouse cursor theme

1.8.0 - "Mighty Move"
=====================

New features: