@@ -126,6 +126,8 @@ static const int MIN_HEIGHT = 75;
 
 static const int MIN_WIDTH = 200;
 
+static const QColor TEXT_EDIT_BACKGROUND_COLOR { 0x00, 0x00, 0x00, 0x10 };
+
 } // namespace Node
 
 namespace Scene {
