@@ -5,7 +5,9 @@ New features:
 
 * Add What's New dialog
   - Help => What's New
-
+* Fix Github Issue #41: Allow nodes to be resized horizontally
+  - Nodes will now automatically scale also horizontally by the text width
+  
 Bug fixes:
 
 Other:
